--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   circular_countdown_timer: ^0.2.3
   flutter_bloc: ^8.1.4
+  dotted_border: ^2.1.0
   smooth_page_indicator: ^1.1.0
   flutter_verification_code: ^1.1.7
   carousel_slider: ^4.2.1
