--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: thimar
-description: "A new Flutter project."
+description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.3.0-279.0.dev <4.0.0'
+  sdk: '>=3.0.6 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -28,35 +28,65 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  go_router: ^13.2.0
-  flutter_screenutil: ^5.9.0
-  flag: ^7.0.0
-  font_awesome_flutter: ^10.7.0
-  circular_countdown_timer: ^0.2.3
-  flutter_bloc: ^8.1.4
-  dotted_border: ^2.1.0
-  smooth_page_indicator: ^1.1.0
-  flutter_verification_code: ^1.1.7
-  carousel_slider: ^4.2.1
-  flutter_rating_bar: ^4.0.1
   flutter:
     sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
+
+  snippet_coder_utils: ^1.0.14
+  cupertino_icons: ^1.0.2
+  flutter_svg: ^2.0.5
+  dio: ^5.3.2
+  flutter_bloc: ^8.1.3
+  bloc: ^8.1.2
+  kiwi: ^4.1.0
+  shared_preferences: ^2.2.1
+  animate_do: ^3.0.2
+  pin_code_fields: ^8.0.1
+  circular_countdown_timer: ^0.2.3
+  dotted_border: ^2.0.0+3
+  carousel_slider: ^4.2.1
+  flutter_html: ^3.0.0-alpha.5
+  quick_log: ^5.3.0
+  image_picker: ^1.0.4
+  firebase_core: ^2.16.0
+  firebase_messaging: ^14.6.8
+  flutter_screenutil: ^5.7.0
+  easy_localization: ^3.0.3
+  google_maps_flutter: ^2.3.0
+  geolocator: ^10.1.0
+  geocoding: ^2.1.0
+  share: ^2.0.4
+  url_launcher: ^6.1.11
+  lottie: ^2.3.2
+  flutter_rating_bar: ^4.0.1
+  shimmer: ^3.0.0
+  get_it: ^7.6.0
+  go_router:
+  font_awesome_flutter:
+  country_flags: ^2.2.0
+  flag: ^7.0.0
+  smooth_page_indicator: ^1.1.0
+
+
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+flutter_native_splash:
 
+  image: assets/images/Groups 1.png
+  android: true
+  ios: true
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -68,10 +98,13 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+
+
+  # To add assets to your application, add an assets section, like this:
+  # assets:
+  #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
