--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -65,7 +65,7 @@ android {
         }
     }
       defaultConfig {
-            minSdkVersion 20
+            minSdkVersion flutter.minSdkVersion
           }
 
 }
