--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,10 +54,10 @@ dependencies:
   firebase_core: ^2.16.0
   firebase_messaging: ^14.6.8
   flutter_screenutil: ^5.7.0
-  easy_localization: ^3.0.3
   google_maps_flutter: ^2.3.0
   geolocator: ^10.1.0
   geocoding: ^2.1.0
+  intl: ^0.19.0
   share: ^2.0.4
   url_launcher: ^6.1.11
   lottie: ^2.3.2
